--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@fastify/cors": "^8.2.1",
     "@fastify/env": "^4.2.0",
     "@fastify/jwt": "^6.7.1",
-    "@fastify/mongodb": "^6.2.0",
+    "@fastify/mongodb": "^5.0.0",
     "@fastify/session": "^10.1.1",
+    "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
     "fastify-swagger": "^5.2.0",
     "uuid": "^9.0.0"
