--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fastify/cors": "^8.2.1",
     "@fastify/env": "^4.2.0",
     "@fastify/mongodb": "^7.0.0",
-    "fastify": "^4.15.0"
+    "bcrypt": "^5.1.0",
+    "fastify": "^4.15.0",
+    "uuid": "^9.0.0"
   }
 }
